# us_address_parser

./: Cargo.toml  README.md
src/: lib.rs  regex.rs
src/components/: directional.rs  mod.rs  states.rs  street_type.rs  unit.rs
src/parse/: direction.rs  mod.rs  street.rs  street_type.rs  unit.rs
