[package]
name = "us_address_parser"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A Rust crate that parses U.S. street addresses."
readme = "README.md"
repository = "https://github.com/Cosiamo/us_address_parser"
keywords = ["parser", "address", "addresses", "street", "parse"]
categories = ["Parser implementations", "Template engine"]
exclude = ["main.rs", ".vscode/*", ".gitignore", ".idea/"]

[dependencies]
regex = "1.9.6"
once_cell = "1.18.0"